frontend/test/should_fail/map_004.grg
using map_model_001;

rule wrongKeyType {
	a:A;
	
	modify {
		eval {
			a.intToString = a.intToString.put(a.stringValue, a.stringValue);
		}
	}
}